# switchboard-mcp

./: CLAUDE.md  README.md  SIMPLE_SCRIPT.md  pyproject.toml  switchboard.yaml
src/: main.py  test_client.py
src/simple_script/: __init__.py  interpreter.py  lexer.py  parser.py  tools.py
src/switchboard_mcp/: config.py  server.py  session_manager.py  utils.py
test/: test_interpreter.py  test_lexer.py  test_parser.py  test_script_executor.py  test_utils.py
